@@ -109,7 +109,27 @@
                         --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                         --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
                         --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens=java.base/javax.security.auth=ALL-UNNAMED
+                        --enable-native-access=ALL-UNNAMED
                     </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.5.0</version>
+                <configuration>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</argument>
+                        <argument>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</argument>
+                        <argument>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argument>
+                        <argument>--add-opens=java.base/javax.security.auth=ALL-UNNAMED</argument>
+                        <argument>--enable-native-access=ALL-UNNAMED</argument>
+                        <argument>-classpath</argument>
+                        <classpath/>
+                        <argument>com.gojek.mc2pinot.Main</argument>
+                    </arguments>
                 </configuration>
             </plugin>
             <plugin>
